Char,Digit,Priority,Repeatable as fragments. LeaseQueue, FragmentState.